--- a/index.html
+++ b/index.html
@@ -877,7 +877,7 @@
             <div class="container mx-auto flex items-center justify-between">
                 <!-- 网站标题 -->
                 <div class="text-xl font-bold bg-gradient-to-r from-yellow-400 to-yellow-600 text-transparent bg-clip-text">
-                    <i class="fas fa-birthday-cake mr-2"></i>冯子晨的网站
+                    <i class="fas fa-birthday-cake mr-2"></i>冯子晨De网站
                 </div>
 
                 <!-- 桌面导航菜单 -->
@@ -960,7 +960,7 @@
                                         <!-- 歌曲信息 -->
                                         <div class="song-info text-center mb-4">
                                             <h3 class="text-xl font-bold text-yellow-400">星光不落</h3>
-                                            <p class="text-gray-400">AI & KKchan</p>
+                                            <p class="text-gray-400">AI & KKchan（因ai演唱所以会略有不足，请多谅解）</p>
                                         </div>
                                         
                                         <!-- 播放控制 -->
@@ -1185,7 +1185,7 @@
                         <div class="timeline-dot absolute left-5 top-9"></div>
                         <div class="glassmorphism p-4 rounded-lg">
                             <h3 class="text-xl font-semibold text-yellow-400">2022年</h3>
-                            <p class="text-gray-400">代表作诞生与风波：这一年，冯子晨创作并发布了后来成为他代表作的歌曲——《半山腰》。这首歌倾注了他大量心血，编曲和制作用了大约半年时间。歌曲旨在鼓励大家跨过舒适圈，寻找自己的更高峰，后被广泛用于各类励志视频，充满正能量。
+                            <p class="text-gray-400">代表作诞生与风波：这一年，创作并发布了后来成为他代表作的歌曲——《半山腰》。这首歌倾注了他大量心血，编曲和制作用了大约半年时间。歌曲旨在鼓励大家跨过舒适圈，寻找自己的更高峰，后被广泛用于各类励志视频，充满正能量。
 然而，这首歌的成功也带来了考验。歌曲发布后，他被不少网友指责抄袭某一动漫主题曲，遭遇了"前所未有的网络暴力"。在朋友鼓励和平台帮助下，他最终通过发布澄清视频，用一系列证据证明了自己的清白。这一事件也让他呼吁大家对待原创音乐能"多一些包容和理解"。</p>
                         </div>
                     </div>
@@ -1310,6 +1310,8 @@
         </div>
         <div class="lyrics-content" id="lyricsContent">
             <!-- 静态歌词内容 -->
+            <p>此歌基于《半山腰》改编而成，祝冯子晨老师生日快乐！</p>
+            <p>-----------------------------------------------------</p>
             <p>不过是追光的人 怎么嘲笑顶峰的神</p>
             <p>这世界最不缺的就是天分</p>
             <p>不过是舞台浮沉 不过是岁月无痕</p>
